--- a/src/main/resources/templates/Emergency/result.mustache
+++ b/src/main/resources/templates/Emergency/result.mustache
@@ -68,16 +68,16 @@
     <h2>응급 상황 설명</h2>
     <div class="form-group">
         <label for="summary">상황 메시지 요약</label>
-<!--        <input type="text" id="summary" value="{summary}" readonly>-->
+        <input type="text" id="summary" value="{{emergency_prediction.summary}}" readonly>
     </div>
     <div class="form-row">
         <div class="form-group">
             <label for="keywords">키워드</label>
-<!--            <input type="text" id="keywords" value="{keywords}" readonly>-->
+            <input type="text" id="keywords" value="{{emergency_prediction.keywords}}" readonly>
         </div>
         <div class="form-group">
             <label for="predicted-class">예측 클래스</label>
-            <input type="text" id="predicted-class" value="{{model}}" readonly>
+            <input type="text" id="predicted-class" value="{{emergency_prediction.predicted_class}}" readonly>
         </div>
     </div>
     <form action="/re_input" method="GET">
@@ -97,22 +97,22 @@
         </tr>
         </thead>
         <tbody>
-<!--        {#nearest_hospitals}-->
-<!--            <tr>-->
-<!--                <td>{@index}</td>-->
-<!--                <td>{hospital_name}</td>-->
-<!--                <td>{tel1}</td>-->
-<!--                <td>{}</td>-->
-<!--                <td>{거리 (km)}</td>-->
-<!--                <td>{소요시간}</td>-->
-<!--                <td>{도착예정시각}</td>-->
-<!--            </tr>-->
-<!--        {/nearest_hospitals}-->
-<!--        {^nearest_hospitals}-->
-<!--            <tr>-->
-<!--                <td colspan="7">데이터 없음</td>-->
-<!--            </tr>-->
-<!--        {/nearest_hospitals}-->
+        {{#nearest_hospitals}}
+            <tr>
+                <td>{{@index}}</td>
+                <td>{{nearest_hospitals.병원명}}</td>
+                <td>{{nearest_hospitals.전화번호1}}</td>
+                <td>{{nearest_hospitals.주소}}</td>
+                <td>{{nearest_hospitals.거리 (km)}}</td>
+                <td>{{nearest_hospitals.소요시간}}</td>
+                <td>{{nearest_hospitals.도착예정시각}}</td>
+            </tr>
+        {{/nearest_hospitals}}
+        {{^nearest_hospitals}}
+            <tr>
+                <td colspan="7">데이터 없음</td>
+            </tr>
+        {{/nearest_hospitals}}
         </tbody>
     </table>
 </main>
