--- a/src/main/resources/templates/Emergency/result.mustache
+++ b/src/main/resources/templates/Emergency/result.mustache
@@ -97,22 +97,12 @@
         </tr>
         </thead>
         <tbody>
-        {{#nearest_hospitals}}
             <tr>
-                <td>{{@index}}</td>
-                <td>{{nearest_hospitals.병원명}}</td>
-                <td>{{nearest_hospitals.전화번호1}}</td>
-                <td>{{nearest_hospitals.주소}}</td>
-                <td>{{nearest_hospitals.거리 (km)}}</td>
-                <td>{{nearest_hospitals.소요시간}}</td>
-                <td>{{nearest_hospitals.도착예정시각}}</td>
+                <td>{{nearest_Hospitalsaaaaaa}}</td>
             </tr>
-        {{/nearest_hospitals}}
-        {{^nearest_hospitals}}
             <tr>
                 <td colspan="7">데이터 없음</td>
             </tr>
-        {{/nearest_hospitals}}
         </tbody>
     </table>
 </main>
