--- a/src/main/resources/templates/Emergency/result.mustache
+++ b/src/main/resources/templates/Emergency/result.mustache
@@ -98,7 +98,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>{{nearest_Hospitalsaaaaaa}}</td>
+                <td>{{nearest_Hospitals}}</td>
             </tr>
             <tr>
                 <td colspan="7">데이터 없음</td>
