--- a/Backend/mini7/src/main/resources/templates/Emergency/login.mustache
+++ b/Backend/mini7/src/main/resources/templates/Emergency/login.mustache
@@ -206,7 +206,7 @@
             <button type="submit">로그인</button>
         </form>
         <div class="links">
-            <a href="#" class="modal-trigger" data-modal="id-modal">아이디 찾기</a> | <a href="#" class="modal-trigger" data-modal="pwd-modal">비밀번호 찾기</a> | <a href="#" class="modal-trigger" data-modal="join-modal">회원가입</a>
+            <a href="#" class="modal-trigger" data-modal="id-modal">아이디 찾기</a> | <a href="#" class="modal-trigger" data-modal="pwd-modal">비밀번호 찾기</a> | <a href="/join">회원가입</a>
         </div>
 
         <!-- 모달 팝업들 -->
@@ -360,6 +360,8 @@
                 passwordError.style.display = 'block';
             } else {
                 alert('로그인 성공');
+                localStorage.setItem('isLoggedIn', 'true');
+                window.location.href = '/';
             }
         }
     });
