--- a/Backend/mini7/src/main/resources/templates/layouts/header.mustache
+++ b/Backend/mini7/src/main/resources/templates/layouts/header.mustache
@@ -78,10 +78,10 @@
                         } else {
                             // 비로그인 상태: 로그인 및 회원가입 버튼
                             navButtons.innerHTML = `
-                                <form action="/login" method="get">
+                                <form action="/auth/login" method="get">
                                     <button class="nav-button">로그인</button>
                                 </form>
-                                <form action="/join" method="get">
+                                <form action="/auth/register" method="get">
                                     <button class="nav-button">회원가입</button>
                                 </form>
                             `;
